--- a/example/slider-2/slider.css
+++ b/example/slider-2/slider.css
@@ -49,7 +49,7 @@ table.options tr.sep td {
  	height: 100%;
  	width: 100%;
     position: absolute;
-	cursor:url(grab.png), auto;
+	cursor:url(https://lh3.googleusercontent.com/-SB_iMs_F1qA/VzJwU5IsEPI/AAAAAAAAFuI/OQMkKMajuaoKrcmVefMKadabOlKbUWYQwCKgB/s1600/grab.png), auto;
 	
 }
 
